spacing issue

--- a/app/assets/stylesheets/trades.css.scss
+++ b/app/assets/stylesheets/trades.css.scss
@@ -727,21 +727,25 @@ th, td {
 }
 
 .count-0 {
+      height: 3px;
       border: solid 1px #999;
       background-color: #CCC;
 }
 
 .count-1 {
+      height: 3px;
       border: solid 1px #999;
       background-color: #99CC99;
 }
 
 .count-2 {
+      height: 3px;
       border: solid 1px #999;
       background-color: #77AA77;
 }
 
 .count-3 {
+      height: 3px;
       border: solid 1px #999;
       background-color: #558855;
 }
